# snipren

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  commit-lint.yml  deploy-crate.yml
src/: lib.rs
