[package]
name = "snipren"
version = "0.1.3"
edition = "2024"
authors = ["John Cairns <john@2ad.com>"]
description = "Easy rename for unix-like systems"
license = "MIT"
repository = "https://github.com/jac18281828/rn"
documentation = "https://docs.rs/rn"
readme = "README.md"
keywords = ["rename", "unix", "filesystem", "cli"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "rn"
path = "src/bin/rn.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"